--- a/sw/templates/base.html
+++ b/sw/templates/base.html
@@ -17,7 +17,7 @@
     <link href="{{ STATIC_URL }}uni_form/uni-form.css" rel="stylesheet">
 
     {# Base #}
-    <link href="{{ STATIC_URL }}css/base.css?2010121802" rel="stylesheet">
+    <link href="{{ STATIC_URL }}css/base.css?2010121804" rel="stylesheet">
 
     {% block css %}{% endblock %}
 
@@ -41,7 +41,7 @@
 </head>
 <body class="container_12 {% block body_class %}{% endblock %}">
 
-<div id="auth-bar" class="grid_12 alpha omega"
+<div id="auth-bar"
 {% if debug %}
     style="background-color:darkred;border-bottom-color:red"
 {% endif %}
