--- a/sw/templates/base/auth_bar_signedout.html
+++ b/sw/templates/base/auth_bar_signedout.html
@@ -1,1 +1,1 @@
-<span><a href="{% url sw_hq %}">Volunteer sign in / sign up</a></span>
+<span class="icon-link user_go-link"><a href="{% url sw_hq %}"><span>Volunteer sign in / sign up</span></a></span>
