--- a/sw/templates/base_hq_6_6.html
+++ b/sw/templates/base_hq_6_6.html
@@ -2,6 +2,8 @@
 
 {% load breadcrumbs feature_tag %}
 
+{% block logo_url %}/hq/{% endblock %}
+
 {% block body_class %}{{ block.super }} hq{% endblock %}
 
 {% block header_slogan %}Volunteer Headquarters{% endblock %}
