Go back to full-width formatting for profiles.

--- a/sw/templates/idios/profile.html
+++ b/sw/templates/idios/profile.html
@@ -16,7 +16,7 @@
 {% endblock %}
 
 {% block body %}
-    <div class="prefix_2 grid_8 suffix_2">
+    <div class="grid_12">
         <div class="vcard">
             {# TODO: needs fn (full name) class on some element that contains full name #}
 
