On a user's profile, show teams, with coordinator status, that the user has joined.

--- a/sw/templates/base_12.html
+++ b/sw/templates/base_12.html
@@ -5,4 +5,5 @@
         {% include "site_messages.html" %}
         {% block content_body %}{% endblock %}
     </div>
+    {% block sidebar %}{% endblock %}
 {% endblock %}
