--- a/sw/templates/idios/base.html
+++ b/sw/templates/idios/base.html
@@ -13,12 +13,10 @@
 {% endblock %}
 
 {% block page_content %}
-    <div id="content" class="grid_12">
+    <div id="content" class="grid_{% block content_cols %}12{% endblock %}">
         {% include "site_messages.html" %}
         {% block body %}
         {% endblock %}
     </div>
-{% endblock %}
-
-{% block sidebar %}
+    {% block sidebar %}{% endblock %}
 {% endblock %}
